@@ -1,6 +1,15 @@
 # ChangeLog for Portage; the Gentoo Linux ports system 
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
 
+*portage-1.8.9_pre28 (20 Mar 2002)
+
+  20 Mar 2002; Daniel Robbins <drobbins@gentoo.org> portage.py, emerge: an
+  /etc/make.profile dir is now optional and portage will work if it's missing
+  or is a broken symlink.
+  
+  20 Mar 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: fix load()
+  method in packagetree() class.
+
 *portage-1.8.9_pre27 (19 Mar 2002)
 
   19 Mar 2002; Daniel Robbins <drobbins@gentoo.org> portage.py:
